# quarto-test-01

./: .gitignore  .nojekyll  Makefile  README.md  _quarto.yaml  grafts.yaml  pyproject.toml  search.json
.github/workflows/: quarto-graft-build-publish.yaml
.grafts-cache/: build-state.json
_site/: index.html  search.json
_site/docs/: index.html  notebook copy 2.html  notebook copy 7.html
docs/: index.html  index.qmd  notebook copy 2.ipynb  notebook copy 6.ipynb  notebook copy 7.ipynb
docs/guards/: footer.html  header.html
grafts__/my-first-graft/docs/: index.html  notebook.html
site_libs/bootstrap/: bootstrap-5cf4cf6745a008d718d1a4c3a5decc93.min.css  bootstrap-61ec1b3a8e3a33ec97326c5d79de468c.min.css  bootstrap-dark-2f036aa2d8be18d778b897e0d31006be.min.css  bootstrap-dark-d8b62bbeb5ad511557ea3a656f5f1ac8.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-57fec60b307b2e44e5eedec09c7b3148.css  quarto-syntax-highlighting-dark-21591c69f0c38d515a802d0c95f8d624.css
src/my_first_graft/: sample.py
src/quarto_test_01/: __init__.py
src/second_graft/: sample.py
