[project]
name = "my-first-graft"
version = "0.1.0"
description = "my-first-graft graft starter"
readme = "README.md"
authors = [{ name = "quarto-graft" }]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.35.2",
    "quarto-cli>=1.8.26",
    "ipykernel>=6.28",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
