[project]
name = "second-graft"
version = "0.1.0"
description = "second-graft graft starter"
readme = "README.md"
authors = [{ name = "quarto-graft" }]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.38.1",
    "ipykernel>=6.28",
    "quarto-cli",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
quarto-cli = { git = "https://github.com/quarto-dev/quarto-cli", rev = "v1.9.31" }
