[project]
name = "quarto-test-01"
version = "0.0.0"
description = "Quarto trunk site for quarto-test-01"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "quarto-cli",
    "quarto-graft",
]

[tool.uv.sources]
quarto-cli = { git = "https://github.com/quarto-dev/quarto-cli", rev = "v1.9.31" }
